# bot-v2-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
.github/workflows/: build.yaml
src/: commands_service.rs  cors.rs  db.rs  lib.rs  main.rs  models.rs  ops.rs  schema.rs
src/api/: twitch.rs
src/models/: channel.rs
src/ops/: channel_ops.rs
src/routes/: channel.rs  commands.rs  mod.rs  token.rs
src/services/: commands_service.rs  mod.rs  token_service.rs
src/util/: utils.rs
