[package]
name = "bot-v2-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres","r2d2"] }
dotenv = "0.15.0"
rocket ={ version= "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}